display scrollbar correctly

--- a/themes/default/editor/screen.css
+++ b/themes/default/editor/screen.css
@@ -1,5 +1,6 @@
 #editor-region {
     width: auto;
+    padding-right:10px;
     height: 100%;
 }
 .editor {
